--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="main">
-        <field-panel :panel-data="panelData"></field-panel>
+        <bw-field-panel :panel-data="bwPanelData"></bw-field-panel>
         <bw-log-panel></bw-log-panel>
         {{ result }}
     </div>
