--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div id="main">
-        <bw-field-panel :panel-data="bwPanelData"></bw-field-panel>
+        <main-panel :panels="panels"></main-panel>
+        <!--bw-field-panel :panel-data="bwPanelData"></bw-field-panel-->
         <bw-log-panel></bw-log-panel>
         {{ result }}
     </div>
